--- a/style.css
+++ b/style.css
@@ -1,106 +1,8 @@
-html, body{
+html, body {
 	width: 100%;
 	height: 100%;
 }
 
-body {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	align-items: center;
-	background: #1b1b1b;
-	overflow: hidden;
-}
-
-* {
-	padding: 0;
-	margin: 0;
-}
-
-input {
-	height: 2rem;
-	min-width: 3rem;
-	border: solid transparent;
-	border-radius: 0.5rem;
-	font-size: 2rem;
-}
-
-input:focus {
-	outline: 0.3rem solid #ff7673;
-	transition: 0.3s;
-}
-
-body div {
-	display: flex;
-	margin: 1rem;
-	font-size: 5rem;
-	color: white;
-}
-
-.error::after {
-	position: absolute;
-	content: "값을 확인해 주세요.";
-	color: #e55355;
-	margin-top: 2.3rem;
-	font-size: 1rem;
-}
-
-.copied::after {
-	position: absolute;
-	content: "복사되었습니다!";
-	color: #22cb00;
-	margin-top: 3.3rem;
-	margin-left: 0;
-	font-size: 1rem;
-}
-
-#container {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	flex-direction: column;
-}
-
-#home > div {
-	visibility: visible;
-	font-size: 2rem;
-	margin: 2rem 1rem;
-}
-
-#home #homeIcon {
-	display: none;
-}
-
-#description, #urlCopy {
-	visibility: hidden;
-}
-
-#urlCopy {
+.clickable {
 	user-select: none;
-}
-
-#urlCopy:hover {
-	cursor: pointer;
-}
-
-#homeIcon {
-	position: absolute;
-	margin: 0 !important;
-	left: 1rem;
-	top: 1rem;
-	width: 5rem;
-	height: 5rem;
-	content: "<";
-	font-size: 5rem;
-	font-weight: 900;
-	line-height: 3rem;
-	color: #adadad;
-	cursor: pointer;
-}
-
-#urlCopy {
-	border-radius: 1rem;
-	background: #343434;
-	padding: 0.5rem;
-	border: 0.1rem solid lightgray;
 }
